--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-01-07 Sat 15:05 -->
+<!-- 2023-01-08 Sun 08:44 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Woodworking projects</title>
@@ -64,9 +64,9 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">Woodworking projects</h1>
 
-<div id="outline-container-org2408126" class="outline-2">
-<h2 id="org2408126">Balance board</h2>
-<div class="outline-text-2" id="text-org2408126">
+<div id="outline-container-org847c736" class="outline-2">
+<h2 id="org847c736">Balance board</h2>
+<div class="outline-text-2" id="text-org847c736">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -83,9 +83,9 @@ Desc: Design inspiration from the <a href="https://indoboardaus.com/">Indo Board
 </div>
 </div>
 
-<div id="outline-container-org03b91c1" class="outline-2">
-<h2 id="org03b91c1">Art print frame</h2>
-<div class="outline-text-2" id="text-org03b91c1">
+<div id="outline-container-org163b942" class="outline-2">
+<h2 id="org163b942">Art print frame</h2>
+<div class="outline-text-2" id="text-org163b942">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -102,18 +102,22 @@ Desc: This one was created in a couple of hours using some old trim scrap peices
 </div>
 </div>
 
-<div id="outline-container-org100feed" class="outline-2">
-<h2 id="org100feed"><span class="todo TODO">TODO</span> Workbench</h2>
-<div class="outline-text-2" id="text-org100feed">
+<div id="outline-container-orgbb89567" class="outline-2">
+<h2 id="orgbb89567">Workbench</h2>
+<div class="outline-text-2" id="text-orgbb89567">
 <p>
 Date: 3 Jan 2023
+</p>
+
+<p>
+Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit bench dogs or clamps. It is also hollow under to allow easy clamping from most locations. The legs came from an old sleeper that was planed down; timber type unknown but has a reddish tint. The beams were planed down from some old 90x45 pine lengths. Legs and beams were joined using dowels and finished with clear polyurethane.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org8a47c85" class="outline-2">
-<h2 id="org8a47c85">Entryway bench</h2>
-<div class="outline-text-2" id="text-org8a47c85">
+<div id="outline-container-org45a9ffb" class="outline-2">
+<h2 id="org45a9ffb">Entryway bench</h2>
+<div class="outline-text-2" id="text-org45a9ffb">
 <p>
 Date: 23 Dec 2022
 </p>
@@ -130,9 +134,9 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 </div>
 </div>
 
-<div id="outline-container-org01d6e4a" class="outline-2">
-<h2 id="org01d6e4a">Plant ladder</h2>
-<div class="outline-text-2" id="text-org01d6e4a">
+<div id="outline-container-orga4785d5" class="outline-2">
+<h2 id="orga4785d5">Plant ladder</h2>
+<div class="outline-text-2" id="text-orga4785d5">
 <p>
 Date: 18 Dec 2022
 </p>
@@ -143,9 +147,9 @@ Desc: This simple job was created from two square pine lengths and a dowel. The 
 </div>
 </div>
 
-<div id="outline-container-org7c9ad98" class="outline-2">
-<h2 id="org7c9ad98">Builtin workbench</h2>
-<div class="outline-text-2" id="text-org7c9ad98">
+<div id="outline-container-org3da3732" class="outline-2">
+<h2 id="org3da3732">Builtin workbench</h2>
+<div class="outline-text-2" id="text-org3da3732">
 <p>
 Date: 11 Dec 2022
 </p>
