--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-01-08 Sun 08:44 -->
+<!-- 2023-01-08 Sun 09:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Woodworking projects</title>
@@ -64,9 +64,9 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">Woodworking projects</h1>
 
-<div id="outline-container-org847c736" class="outline-2">
-<h2 id="org847c736">Balance board</h2>
-<div class="outline-text-2" id="text-org847c736">
+<div id="outline-container-org437dcff" class="outline-2">
+<h2 id="org437dcff">Balance board</h2>
+<div class="outline-text-2" id="text-org437dcff">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -83,9 +83,9 @@ Desc: Design inspiration from the <a href="https://indoboardaus.com/">Indo Board
 </div>
 </div>
 
-<div id="outline-container-org163b942" class="outline-2">
-<h2 id="org163b942">Art print frame</h2>
-<div class="outline-text-2" id="text-org163b942">
+<div id="outline-container-org73a14ea" class="outline-2">
+<h2 id="org73a14ea">Art print frame</h2>
+<div class="outline-text-2" id="text-org73a14ea">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -102,12 +102,18 @@ Desc: This one was created in a couple of hours using some old trim scrap peices
 </div>
 </div>
 
-<div id="outline-container-orgbb89567" class="outline-2">
-<h2 id="orgbb89567">Workbench</h2>
-<div class="outline-text-2" id="text-orgbb89567">
+<div id="outline-container-orgb05125e" class="outline-2">
+<h2 id="orgb05125e">Workbench</h2>
+<div class="outline-text-2" id="text-orgb05125e">
 <p>
 Date: 3 Jan 2023
 </p>
+
+
+<div class="figure">
+<p><img src="./pics/workbench.jpg" alt="workbench.jpg" />
+</p>
+</div>
 
 <p>
 Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit bench dogs or clamps. It is also hollow under to allow easy clamping from most locations. The legs came from an old sleeper that was planed down; timber type unknown but has a reddish tint. The beams were planed down from some old 90x45 pine lengths. Legs and beams were joined using dowels and finished with clear polyurethane.
@@ -115,9 +121,9 @@ Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit
 </div>
 </div>
 
-<div id="outline-container-org45a9ffb" class="outline-2">
-<h2 id="org45a9ffb">Entryway bench</h2>
-<div class="outline-text-2" id="text-org45a9ffb">
+<div id="outline-container-org4a6b040" class="outline-2">
+<h2 id="org4a6b040">Entryway bench</h2>
+<div class="outline-text-2" id="text-org4a6b040">
 <p>
 Date: 23 Dec 2022
 </p>
@@ -134,12 +140,18 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 </div>
 </div>
 
-<div id="outline-container-orga4785d5" class="outline-2">
-<h2 id="orga4785d5">Plant ladder</h2>
-<div class="outline-text-2" id="text-orga4785d5">
+<div id="outline-container-org560d8d3" class="outline-2">
+<h2 id="org560d8d3">Plant ladder</h2>
+<div class="outline-text-2" id="text-org560d8d3">
 <p>
 Date: 18 Dec 2022
 </p>
+
+
+<div class="figure">
+<p><img src="./pics/plantladder.jpg" alt="plantladder.jpg" />
+</p>
+</div>
 
 <p>
 Desc: This simple job was created from two square pine lengths and a dowel. The drill press was used to cut inserts for the dowel lengths and the ladder was assembled, no glue or fasteners.
@@ -147,12 +159,18 @@ Desc: This simple job was created from two square pine lengths and a dowel. The 
 </div>
 </div>
 
-<div id="outline-container-org3da3732" class="outline-2">
-<h2 id="org3da3732">Builtin workbench</h2>
-<div class="outline-text-2" id="text-org3da3732">
+<div id="outline-container-orgb9a7171" class="outline-2">
+<h2 id="orgb9a7171">Builtin workbench</h2>
+<div class="outline-text-2" id="text-orgb9a7171">
 <p>
 Date: 11 Dec 2022
 </p>
+
+
+<div class="figure">
+<p><img src="./pics/builtinbench.jpg" alt="builtinbench.jpg" />
+</p>
+</div>
 
 <p>
 Desc: The garage builtin workbench was built using spoted gum panels (cheapest available panel), MDF board coated with BIN sealer for the supports, and standard pegboard panels. The bench panels are fixed to the studs using steel brackets. In hind sight I would've built a proper support rather than the MDF and focued on better quality levelling.
