--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-01-08 Sun 09:01 -->
+<!-- 2023-01-08 Sun 11:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Woodworking projects</title>
@@ -64,16 +64,16 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">Woodworking projects</h1>
 
-<div id="outline-container-org437dcff" class="outline-2">
-<h2 id="org437dcff">Balance board</h2>
-<div class="outline-text-2" id="text-org437dcff">
+<div id="outline-container-orgbaa1d2c" class="outline-2">
+<h2 id="orgbaa1d2c">Balance board</h2>
+<div class="outline-text-2" id="text-orgbaa1d2c">
 <p>
 Date: 6 Jan 2023
 </p>
 
 
 <div class="figure">
-<p><img src="./pics/balanceboard.jpg" alt="balanceboard.jpg" />
+<p><img src="https://live.staticflickr.com/65535/52612943042_1f51c8d021_k.jpg" alt="52612943042_1f51c8d021_k.jpg" />
 </p>
 </div>
 
@@ -83,16 +83,16 @@ Desc: Design inspiration from the <a href="https://indoboardaus.com/">Indo Board
 </div>
 </div>
 
-<div id="outline-container-org73a14ea" class="outline-2">
-<h2 id="org73a14ea">Art print frame</h2>
-<div class="outline-text-2" id="text-org73a14ea">
+<div id="outline-container-orgdc5df10" class="outline-2">
+<h2 id="orgdc5df10">Art print frame</h2>
+<div class="outline-text-2" id="text-orgdc5df10">
 <p>
 Date: 6 Jan 2023
 </p>
 
 
 <div class="figure">
-<p><img src="./pics/artframe.jpg" alt="artframe.jpg" />
+<p><img src="https://live.staticflickr.com/65535/52613710774_7df26ecaa6_k.jpg" alt="52613710774_7df26ecaa6_k.jpg" />
 </p>
 </div>
 
@@ -102,16 +102,16 @@ Desc: This one was created in a couple of hours using some old trim scrap peices
 </div>
 </div>
 
-<div id="outline-container-orgb05125e" class="outline-2">
-<h2 id="orgb05125e">Workbench</h2>
-<div class="outline-text-2" id="text-orgb05125e">
+<div id="outline-container-orgf9f7d1f" class="outline-2">
+<h2 id="orgf9f7d1f">Workbench</h2>
+<div class="outline-text-2" id="text-orgf9f7d1f">
 <p>
 Date: 3 Jan 2023
 </p>
 
 
 <div class="figure">
-<p><img src="./pics/workbench.jpg" alt="workbench.jpg" />
+<p><img src="https://live.staticflickr.com/65535/52613451661_44a7722378_k.jpg" alt="52613451661_44a7722378_k.jpg" />
 </p>
 </div>
 
@@ -121,16 +121,16 @@ Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit
 </div>
 </div>
 
-<div id="outline-container-org4a6b040" class="outline-2">
-<h2 id="org4a6b040">Entryway bench</h2>
-<div class="outline-text-2" id="text-org4a6b040">
+<div id="outline-container-org518b52a" class="outline-2">
+<h2 id="org518b52a">Entryway bench</h2>
+<div class="outline-text-2" id="text-org518b52a">
 <p>
 Date: 23 Dec 2022
 </p>
 
 
 <div class="figure">
-<p><img src="./pics/entrybench.jpg" alt="entrybench.jpg" />
+<p><img src="https://live.staticflickr.com/65535/52612943117_4790209cec_k.jpg" alt="52612943117_4790209cec_k.jpg" />
 </p>
 </div>
 
@@ -140,16 +140,16 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 </div>
 </div>
 
-<div id="outline-container-org560d8d3" class="outline-2">
-<h2 id="org560d8d3">Plant ladder</h2>
-<div class="outline-text-2" id="text-org560d8d3">
+<div id="outline-container-org0f76287" class="outline-2">
+<h2 id="org0f76287">Plant ladder</h2>
+<div class="outline-text-2" id="text-org0f76287">
 <p>
 Date: 18 Dec 2022
 </p>
 
 
 <div class="figure">
-<p><img src="./pics/plantladder.jpg" alt="plantladder.jpg" />
+<p><img src="https://live.staticflickr.com/65535/52613451601_7051f58cde_k.jpg" alt="52613451601_7051f58cde_k.jpg" />
 </p>
 </div>
 
@@ -159,16 +159,16 @@ Desc: This simple job was created from two square pine lengths and a dowel. The 
 </div>
 </div>
 
-<div id="outline-container-orgb9a7171" class="outline-2">
-<h2 id="orgb9a7171">Builtin workbench</h2>
-<div class="outline-text-2" id="text-orgb9a7171">
+<div id="outline-container-orgc8558f9" class="outline-2">
+<h2 id="orgc8558f9">Builtin workbench</h2>
+<div class="outline-text-2" id="text-orgc8558f9">
 <p>
 Date: 11 Dec 2022
 </p>
 
 
 <div class="figure">
-<p><img src="./pics/builtinbench.jpg" alt="builtinbench.jpg" />
+<p><img src="https://live.staticflickr.com/65535/52612943002_f9d729c4ce_k.jpg" alt="52612943002_f9d729c4ce_k.jpg" />
 </p>
 </div>
 
