--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-01-08 Sun 11:34 -->
+<!-- 2023-01-08 Sun 17:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Woodworking projects</title>
@@ -63,10 +63,23 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Woodworking projects</h1>
+<div id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#org51b5953">Balance board</a></li>
+<li><a href="#org732fb80">Art print frame</a></li>
+<li><a href="#orgf6620c9">Workbench</a></li>
+<li><a href="#orgf41249c">Entryway bench</a></li>
+<li><a href="#orgd29ffaf">Plant ladder</a></li>
+<li><a href="#org7e600b7">Builtin workbench</a></li>
+</ul>
+</div>
+</div>
 
-<div id="outline-container-orgbaa1d2c" class="outline-2">
-<h2 id="orgbaa1d2c">Balance board</h2>
-<div class="outline-text-2" id="text-orgbaa1d2c">
+<div id="outline-container-org51b5953" class="outline-2">
+<h2 id="org51b5953">Balance board</h2>
+<div class="outline-text-2" id="text-org51b5953">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -83,9 +96,9 @@ Desc: Design inspiration from the <a href="https://indoboardaus.com/">Indo Board
 </div>
 </div>
 
-<div id="outline-container-orgdc5df10" class="outline-2">
-<h2 id="orgdc5df10">Art print frame</h2>
-<div class="outline-text-2" id="text-orgdc5df10">
+<div id="outline-container-org732fb80" class="outline-2">
+<h2 id="org732fb80">Art print frame</h2>
+<div class="outline-text-2" id="text-org732fb80">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -102,9 +115,9 @@ Desc: This one was created in a couple of hours using some old trim scrap peices
 </div>
 </div>
 
-<div id="outline-container-orgf9f7d1f" class="outline-2">
-<h2 id="orgf9f7d1f">Workbench</h2>
-<div class="outline-text-2" id="text-orgf9f7d1f">
+<div id="outline-container-orgf6620c9" class="outline-2">
+<h2 id="orgf6620c9">Workbench</h2>
+<div class="outline-text-2" id="text-orgf6620c9">
 <p>
 Date: 3 Jan 2023
 </p>
@@ -121,9 +134,9 @@ Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit
 </div>
 </div>
 
-<div id="outline-container-org518b52a" class="outline-2">
-<h2 id="org518b52a">Entryway bench</h2>
-<div class="outline-text-2" id="text-org518b52a">
+<div id="outline-container-orgf41249c" class="outline-2">
+<h2 id="orgf41249c">Entryway bench</h2>
+<div class="outline-text-2" id="text-orgf41249c">
 <p>
 Date: 23 Dec 2022
 </p>
@@ -140,9 +153,9 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 </div>
 </div>
 
-<div id="outline-container-org0f76287" class="outline-2">
-<h2 id="org0f76287">Plant ladder</h2>
-<div class="outline-text-2" id="text-org0f76287">
+<div id="outline-container-orgd29ffaf" class="outline-2">
+<h2 id="orgd29ffaf">Plant ladder</h2>
+<div class="outline-text-2" id="text-orgd29ffaf">
 <p>
 Date: 18 Dec 2022
 </p>
@@ -159,9 +172,9 @@ Desc: This simple job was created from two square pine lengths and a dowel. The 
 </div>
 </div>
 
-<div id="outline-container-orgc8558f9" class="outline-2">
-<h2 id="orgc8558f9">Builtin workbench</h2>
-<div class="outline-text-2" id="text-orgc8558f9">
+<div id="outline-container-org7e600b7" class="outline-2">
+<h2 id="org7e600b7">Builtin workbench</h2>
+<div class="outline-text-2" id="text-org7e600b7">
 <p>
 Date: 11 Dec 2022
 </p>
