--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-01-08 Sun 17:24 -->
+<!-- 2023-01-09 Mon 11:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Woodworking projects</title>
@@ -67,19 +67,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org51b5953">Balance board</a></li>
-<li><a href="#org732fb80">Art print frame</a></li>
-<li><a href="#orgf6620c9">Workbench</a></li>
-<li><a href="#orgf41249c">Entryway bench</a></li>
-<li><a href="#orgd29ffaf">Plant ladder</a></li>
-<li><a href="#org7e600b7">Builtin workbench</a></li>
+<li><a href="#orgd99dc7f">Balance board</a></li>
+<li><a href="#org1c644bb">Art print frame</a></li>
+<li><a href="#org8aeda47">Workbench</a></li>
+<li><a href="#org756989e">Entryway bench</a></li>
+<li><a href="#orge3714ae">Plant ladder</a></li>
+<li><a href="#org86053a9">Builtin workbench</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org51b5953" class="outline-2">
-<h2 id="org51b5953">Balance board</h2>
-<div class="outline-text-2" id="text-org51b5953">
+<div id="outline-container-orgd99dc7f" class="outline-2">
+<h2 id="orgd99dc7f">Balance board</h2>
+<div class="outline-text-2" id="text-orgd99dc7f">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -96,9 +96,9 @@ Desc: Design inspiration from the <a href="https://indoboardaus.com/">Indo Board
 </div>
 </div>
 
-<div id="outline-container-org732fb80" class="outline-2">
-<h2 id="org732fb80">Art print frame</h2>
-<div class="outline-text-2" id="text-org732fb80">
+<div id="outline-container-org1c644bb" class="outline-2">
+<h2 id="org1c644bb">Art print frame</h2>
+<div class="outline-text-2" id="text-org1c644bb">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -110,14 +110,14 @@ Date: 6 Jan 2023
 </div>
 
 <p>
-Desc: This one was created in a couple of hours using some old trim scrap peices from the garage. They were sanded down, cut to size and then dowelled together (rather than a miter join). The fabric was then installed and tensioned using a nail gun.
+Desc: This one was created in a couple of hours using some old trim scrap peices from the garage. They were sanded down, cut to size and then dowelled together (rather than a miter join). The fabric was then installed and tensioned using a staple gun.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgf6620c9" class="outline-2">
-<h2 id="orgf6620c9">Workbench</h2>
-<div class="outline-text-2" id="text-orgf6620c9">
+<div id="outline-container-org8aeda47" class="outline-2">
+<h2 id="org8aeda47">Workbench</h2>
+<div class="outline-text-2" id="text-org8aeda47">
 <p>
 Date: 3 Jan 2023
 </p>
@@ -134,9 +134,9 @@ Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit
 </div>
 </div>
 
-<div id="outline-container-orgf41249c" class="outline-2">
-<h2 id="orgf41249c">Entryway bench</h2>
-<div class="outline-text-2" id="text-orgf41249c">
+<div id="outline-container-org756989e" class="outline-2">
+<h2 id="org756989e">Entryway bench</h2>
+<div class="outline-text-2" id="text-org756989e">
 <p>
 Date: 23 Dec 2022
 </p>
@@ -153,9 +153,9 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 </div>
 </div>
 
-<div id="outline-container-orgd29ffaf" class="outline-2">
-<h2 id="orgd29ffaf">Plant ladder</h2>
-<div class="outline-text-2" id="text-orgd29ffaf">
+<div id="outline-container-orge3714ae" class="outline-2">
+<h2 id="orge3714ae">Plant ladder</h2>
+<div class="outline-text-2" id="text-orge3714ae">
 <p>
 Date: 18 Dec 2022
 </p>
@@ -172,9 +172,9 @@ Desc: This simple job was created from two square pine lengths and a dowel. The 
 </div>
 </div>
 
-<div id="outline-container-org7e600b7" class="outline-2">
-<h2 id="org7e600b7">Builtin workbench</h2>
-<div class="outline-text-2" id="text-org7e600b7">
+<div id="outline-container-org86053a9" class="outline-2">
+<h2 id="org86053a9">Builtin workbench</h2>
+<div class="outline-text-2" id="text-org86053a9">
 <p>
 Date: 11 Dec 2022
 </p>
