--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-01-09 Mon 11:25 -->
+<!-- 2023-02-26 Sun 13:07 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Woodworking projects</title>
@@ -67,19 +67,39 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd99dc7f">Balance board</a></li>
-<li><a href="#org1c644bb">Art print frame</a></li>
-<li><a href="#org8aeda47">Workbench</a></li>
-<li><a href="#org756989e">Entryway bench</a></li>
-<li><a href="#orge3714ae">Plant ladder</a></li>
-<li><a href="#org86053a9">Builtin workbench</a></li>
+<li><a href="#orga99db6b">Side table</a></li>
+<li><a href="#org870c250">Balance board</a></li>
+<li><a href="#org4a94348">Art print frame</a></li>
+<li><a href="#orga758c1a">Workbench</a></li>
+<li><a href="#org24521fe">Entryway bench</a></li>
+<li><a href="#org3dca6a9">Plant ladder</a></li>
+<li><a href="#org84be9b8">Builtin workbench</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgd99dc7f" class="outline-2">
-<h2 id="orgd99dc7f">Balance board</h2>
-<div class="outline-text-2" id="text-orgd99dc7f">
+<div id="outline-container-orga99db6b" class="outline-2">
+<h2 id="orga99db6b">Side table</h2>
+<div class="outline-text-2" id="text-orga99db6b">
+<p>
+Date: 26 Feb 2023
+</p>
+
+
+<div class="figure">
+<p><img src="https://live.staticflickr.com/65535/52711573064_f9d01631e9_k.jpg" alt="52711573064_f9d01631e9_k.jpg" />
+</p>
+</div>
+
+<p>
+Desc: A side table for the corner of our room to hold charging cables. The timber was Okoume glulam panel finished with clear polyurethane. The draw was made from some scrap MDF with a plywood base and painted with Porter's Highland paint. Draw was tough to get in because of the little tolerance, but used some spacers to get the alignment correct.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org870c250" class="outline-2">
+<h2 id="org870c250">Balance board</h2>
+<div class="outline-text-2" id="text-org870c250">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -96,9 +116,9 @@ Desc: Design inspiration from the <a href="https://indoboardaus.com/">Indo Board
 </div>
 </div>
 
-<div id="outline-container-org1c644bb" class="outline-2">
-<h2 id="org1c644bb">Art print frame</h2>
-<div class="outline-text-2" id="text-org1c644bb">
+<div id="outline-container-org4a94348" class="outline-2">
+<h2 id="org4a94348">Art print frame</h2>
+<div class="outline-text-2" id="text-org4a94348">
 <p>
 Date: 6 Jan 2023
 </p>
@@ -115,9 +135,9 @@ Desc: This one was created in a couple of hours using some old trim scrap peices
 </div>
 </div>
 
-<div id="outline-container-org8aeda47" class="outline-2">
-<h2 id="org8aeda47">Workbench</h2>
-<div class="outline-text-2" id="text-org8aeda47">
+<div id="outline-container-orga758c1a" class="outline-2">
+<h2 id="orga758c1a">Workbench</h2>
+<div class="outline-text-2" id="text-orga758c1a">
 <p>
 Date: 3 Jan 2023
 </p>
@@ -134,9 +154,9 @@ Desc: The worktop is created from an MDF panel with 20mm holes at 100CTS to suit
 </div>
 </div>
 
-<div id="outline-container-org756989e" class="outline-2">
-<h2 id="org756989e">Entryway bench</h2>
-<div class="outline-text-2" id="text-org756989e">
+<div id="outline-container-org24521fe" class="outline-2">
+<h2 id="org24521fe">Entryway bench</h2>
+<div class="outline-text-2" id="text-org24521fe">
 <p>
 Date: 23 Dec 2022
 </p>
@@ -153,9 +173,9 @@ Desc: Built to suit the Ikea entryway shelving the 18mm Red Oak panel was cut to
 </div>
 </div>
 
-<div id="outline-container-orge3714ae" class="outline-2">
-<h2 id="orge3714ae">Plant ladder</h2>
-<div class="outline-text-2" id="text-orge3714ae">
+<div id="outline-container-org3dca6a9" class="outline-2">
+<h2 id="org3dca6a9">Plant ladder</h2>
+<div class="outline-text-2" id="text-org3dca6a9">
 <p>
 Date: 18 Dec 2022
 </p>
@@ -172,9 +192,9 @@ Desc: This simple job was created from two square pine lengths and a dowel. The 
 </div>
 </div>
 
-<div id="outline-container-org86053a9" class="outline-2">
-<h2 id="org86053a9">Builtin workbench</h2>
-<div class="outline-text-2" id="text-org86053a9">
+<div id="outline-container-org84be9b8" class="outline-2">
+<h2 id="org84be9b8">Builtin workbench</h2>
+<div class="outline-text-2" id="text-org84be9b8">
 <p>
 Date: 11 Dec 2022
 </p>
